# kubebox

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Makefile  README.md  main.py  pyproject.toml  streamlit_app.py
core/: __init__.py  ai.py  crd.py  events.py  flux.py  graph.py  helm.py  kong.py  kubernetes.py  kustomize.py  network.py  rbac.py  report.py  trace.py  tui.py  utils.py  vault.py
