[project]
name = "k8s-cli-toolbox"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "kubernetes>=35.0.0",
    "rich>=15.0.0",
    "typer>=0.24.1",
]

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
    "pyinstaller>=6.19.0",
]
