[project]
name = "kubebox"
version = "0.6.0"
description = "Read-only Kubernetes DevOps/SRE CLI toolbox with TUI dashboard"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.96.0",
    "kubernetes>=35.0.0",
    "prompt-toolkit>=3.0.52",
    "rich>=15.0.0",
    "textual>=8.2.4",
    "typer>=0.24.1",
]

[dependency-groups]
dev = [
    "pip-audit>=2.10.0",
    "pre-commit>=4.5.1",
    "pyinstaller>=6.19.0",
]
